package com.tp.reporte;

// Este es el Enum que pide el TP
public enum Orientacion {
    VERTICAL,
    HORIZONTAL
}